Update for actor Construction Staff + fix consulation request
- Thêm chức năng nhận nhiêm vụ xây dựng(cập nhật các trạng thài công việc xây dựng được giao),  cập nhật hoàn thành dự án sau khi các nhiệm vụ nhỏ được hoàn thành
- Sửa lại chức năng gửi yêu cầu tư vấn ( cus có thể xoá hoặc sửa khi trạng thái chưa cập nhật)